--- a/index.html
+++ b/index.html
@@ -1,181 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mon Site Tout-en-Un</title>
-<style>
-    /* --- RESET / BASE --- */
-    * { margin:0; padding:0; box-sizing:border-box; font-family: Arial, sans-serif; }
-    body { line-height: 1.6; color: #333; background-color: #f9f9f9; }
-    a { text-decoration: none; color: #007BFF; }
-    a:hover { text-decoration: underline; }
-    h1,h2,h3 { color: #004080; margin-bottom: 10px; }
-
-    /* --- HEADER / NAV --- */
-    header { background-color: #fff; border-bottom: 2px solid #007BFF; padding: 10px 20px; position: sticky; top:0; z-index: 1000; }
-    nav ul { display: flex; list-style: none; justify-content: center; }
-    nav li { margin: 0 15px; }
-    nav a { font-weight: bold; }
-
-    /* --- SECTIONS --- */
-    section { padding: 60px 20px; max-width: 1000px; margin: auto; }
-    .home { text-align: center; }
-    .home h1 { font-size: 2.5em; margin-bottom: 20px; }
-    .home p { font-size: 1.2em; margin-bottom: 30px; }
-
-    .cards { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-    .card { background: #fff; border: 1px solid #007BFF; border-radius: 10px; padding: 20px; width: 250px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); text-align:center; }
-    .btn { display: inline-block; padding: 10px 20px; background: #007BFF; color:#fff; border-radius:5px; margin-top:10px; cursor:pointer; }
-    .btn:hover { background: #004080; }
-
-    /* --- FOOTER --- */
-    footer { background:#004080; color:#fff; text-align:center; padding:20px; }
-
-    /* --- RESPONSIVE --- */
-    @media(max-width:768px){ .cards { flex-direction: column; align-items:center; } }
-
-    /* --- NOUVELLE SECTION --- */
-    #nouvelle-section { background-color: #e6f0ff; padding: 60px 20px; }
-    #nouvelle-section h2 { color: #004080; text-align:center; margin-bottom:30px; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil - Mon site</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- HEADER / NAV -->
-<header>
-    <nav>
-        <ul>
-            <li><a href="#home">Accueil</a></li>
-            <li><a href="#business">Business</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#projets">Projets</a></li>
-            <li><a href="#boutique">Boutique</a></li>
-            <li><a href="#nouvelle-section">Exemple</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-
-<!-- HOME -->
-<section id="home" class="home">
+  <header>
     <h1>Bienvenue sur mon site</h1>
-    <p>Ebooks, projets, blog et bien plus encore.</p>
-    <a href="#boutique" class="btn">Découvrir les ebooks</a>
-</section>
+    <nav>
+      <a href="index.html">Accueil</a>
+      <a href="ebooks.html">Ebooks</a>
+      <a href="prompts.html">Prompts</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<!-- BUSINESS -->
-<section id="business">
-    <h2>Business / Services</h2>
-    <div class="cards">
-        <div class="card">
-            <h3>Service 1</h3>
-            <p>Une courte description de ton service ou business.</p>
-        </div>
-        <div class="card">
-            <h3>Service 2</h3>
-            <p>Une courte description de ton service ou business.</p>
-        </div>
-    </div>
-</section>
+  <main>
+    <h2>Bienvenue !</h2>
+    <p>Découvrez mes ebooks, mes prompts ChatGPT, et bien plus encore.</p>
+  </main>
 
-<!-- BLOG -->
-<section id="blog">
-    <h2>Blog</h2>
-    <div class="cards">
-        <div class="card">
-            <h3>Article 1</h3>
-            <p>Résumé ou introduction de ton article de blog.</p>
-        </div>
-        <div class="card">
-            <h3>Article 2</h3>
-            <p>Résumé ou introduction de ton article de blog.</p>
-        </div>
-    </div>
-</section>
-
-<!-- PROJETS / APPRENTISSAGE -->
-<section id="projets">
-    <h2>Projets / Apprentissage</h2>
-    <div class="cards">
-        <div class="card">
-            <h3>Projet 1</h3>
-            <p>Courte description de ton projet ou apprentissage.</p>
-        </div>
-        <div class="card">
-            <h3>Projet 2</h3>
-            <p>Courte description de ton projet ou apprentissage.</p>
-        </div>
-    </div>
-</section>
-
-<!-- BOUTIQUE -->
-<section id="boutique">
-    <h2>Boutique / Ebooks</h2>
-    <div class="cards">
-        <!-- Ebook gratuit -->
-        <div class="card">
-            <h3>Ebook Gratuit 1</h3>
-            <p>Un petit guide gratuit.</p>
-            <a href="#" class="btn" onclick="alert('Lien de téléchargement à remplacer par ton PDF')">Télécharger</a>
-        </div>
-        <!-- Ebook gratuit -->
-        <div class="card">
-            <h3>Ebook Gratuit 2</h3>
-            <p>Un autre guide gratuit.</p>
-            <a href="#" class="btn" onclick="alert('Lien de téléchargement à remplacer par ton PDF')">Télécharger</a>
-        </div>
-        <!-- Ebook payant -->
-        <div class="card">
-            <h3>Ebook Payant 1</h3>
-            <p>À venir…</p>
-            <a href="#" class="btn" onclick="alert('En cours de développement')">Acheter</a>
-        </div>
-        <div class="card">
-            <h3>Ebook Payant 2</h3>
-            <p>À venir…</p>
-            <a href="#" class="btn" onclick="alert('En cours de développement')">Acheter</a>
-        </div>
-    </div>
-</section>
-
-<!-- NOUVELLE SECTION (EXEMPLE) -->
-<section id="nouvelle-section">
-    <h2>Exemple / Guides</h2>
-    <div class="cards">
-        <!-- Ebook gratuit -->
-        <div class="card">
-            <h3>Ebook Gratuit Exemple</h3>
-            <p>Un guide gratuit d’exemple.</p>
-            <a href="#" class="btn" onclick="alert('Lien de téléchargement à remplacer par ton PDF')">Télécharger</a>
-        </div>
-        <!-- Ebook payant -->
-        <div class="card">
-            <h3>Ebook Payant Exemple</h3>
-            <p>À venir pour PayPal.</p>
-            <a href="#" class="btn" onclick="alert('En cours de développement')">Acheter</a>
-        </div>
-    </div>
-</section>
-
-<!-- CONTACT -->
-<section id="contact">
-    <h2>Contact</h2>
-    <form onsubmit="alert('Formulaire en cours de développement'); return false;" style="max-width:500px; margin:auto;">
-        <label>Nom :</label><br>
-        <input type="text" required style="width:100%; padding:8px; margin-bottom:10px;"><br>
-        <label>Email :</label><br>
-        <input type="email" required style="width:100%; padding:8px; margin-bottom:10px;"><br>
-        <label>Message :</label><br>
-        <textarea required style="width:100%; padding:8px; margin-bottom:10px;"></textarea><br>
-        <button type="submit" class="btn">Envoyer</button>
-    </form>
-</section>
-
-<!-- FOOTER -->
-<footer>
-    &copy; 2025 Mon Site Tout-en-Un
-</footer>
-
+  <footer>
+    <p>© 2025 Mon site. Tous droits réservés.</p>
+  </footer>
 </body>
 </html>
