--- a/prompts.html
+++ b/prompts.html
@@ -1,29 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prompts ChatGPT</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>NovaFrames840 — Prompts ChatGPT</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Prompts ChatGPT</h1>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="ebooks.html">Ebooks</a>
-      <a href="prompts.html">Prompts</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container" style="display:flex;align-items:center;gap:18px">
+      <div class="brand">NovaFrames840</div>
+      <nav style="flex:1">
+        <a href="index.html">Accueil</a>
+        <a href="ebooks.html">Ebooks</a>
+        <a href="prompts.html">Prompts</a>
+        <a href="contact.html">Contact</a>
+        <a href="plan-du-site.html">Plan du site</a>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <h2>Prompts gratuits et payants</h2>
-    <p>Liste tes prompts ici, avec des descriptions et des boutons pour acheter ou copier.</p>
+    <section class="container">
+      <h2 style="text-align:center;color:var(--bleu-fonce)">🤖 Prompts ChatGPT</h2>
+
+      <div class="grid">
+        <div class="card">
+          <h3>Prompts gratuits</h3>
+          <div class="prompt">
+            <h4>Plan d’entraînement calisthénie</h4>
+            <p>Prompt : “Crée-moi un plan d'entraînement 4 semaines pour débutant en calisthénie, sans matériel.”</p>
+            <a class="btn" href="#" onclick="alert('Bientôt disponible')" >Copier / Télécharger</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Prompts payants</h3>
+          <div class="prompt">
+            <h4>Pack Premium Business (20 prompts)</h4>
+            <p>Description : prompts pour stratégies marketing, funnels, copywriting.</p>
+            <!-- Lien Payhip à ajouter plus tard -->
+            <a class="btn btn-pay" href="#" onclick="alert('Lien Payhip à ajouter')">Acheter (bientôt)</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 Mon site. Tous droits réservés.</p>
+    <div class="container">© 2025 NovaFrames840</div>
   </footer>
 </body>
 </html>
+
